# SecFfmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luongtd14/secffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/fftools/: ffmpeg.c  ffmpeg.h
app/src/main/cpp/mmfw_include/ffmpeg/arm64-v8a/: cmdutils.h  ffmpeg.h
app/src/main/java/com/luongtd14/secffmpeg/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/luongtd14/secffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
j1/ffmpeg-android-maker-master/scripts/: parse-arguments.sh
